# qDocBase6

./: .gitignore  CMakeLists.txt  README.md
src/: Doxyfile  abstractprint.cc  abstractprint.h  abstracttr.cc  abstracttr.h  baseentities_p.cc  baseentities_p.h  br_cnpj.cc  br_cnpj.h  br_cnpj_alpha.cpp  br_cnpj_alpha.h  br_cnpj_v1.cpp  br_cnpj_v1.h  br_cpf.cc  br_cpf.h  combobox_entities_p.cc  combobox_entities_p.h  combobox_phones_p.cc  combobox_phones_p.h  customdoublevalidator.cc  customdoublevalidator.h  customlowervalidator.cc  customlowervalidator.h  customuppervalidator.cc  customuppervalidator.h  departments_p.cc  departments_p.h  dialogabout.cc  dialogabout.h  dialogabout.ui  dialogsettings.cc  dialogsettings.h  dialogsettings.ui  doctypes_p.cc  doctypes_p.h  exportfiles.cc  exportfiles.h  filefilters_p.cc  filefilters_p.h  formdocuments.cc  (+70 more)
src/doc/: README.md
src/i18n/: qDocBase6_en_US.qm  qDocBase6_pt_BR.qm
src/images/: editcopy.xpm  editcut.xpm  editpaste.xpm  fileicons.qrc  filenew.xpm
src/sql/: DOCBASE6.sql
